--- a/code/One.html
+++ b/code/One.html
@@ -233,6 +233,33 @@
         <p><span>New </span>Arrivals</p>
       </div>
     </div>
+    <div class="cards-3" >
+      <div class="flex-3">Clothing
+           <img class="pic-23" src="../img/product-1-1.jpg" height="230px" width="245px"> 
+        </div>     
+        <div class="flex-1">Clothing
+           <img class="pic-25" src="../img/product-2-1.jpg" height="230px" width="245px">
+        </div>        
+        <div class="flex-1">Clothing
+           <img class="pic-27" src="../img/product-3-1.jpg" height="230px" width="245px"> 
+        </div>
+        <div class="flex-1">Clothing
+           <img class="pic-29" src="../img/category-7.jpg" height="230px" width="245px">
+        </div>
+        <div class="pat-2">
+        <div class="feat-2">
+            Colorful Pattern Shirts
+        </div>
+        <div class="feat-2">
+            Colorful Pattern Shirts
+        </div>
+        <div class="feat-2">
+            Colorful Pattern Shirts
+        </div>
+        <div class="feat-2">
+            Colorful Pattern Shirts
+        </div>
+    </div>
 </body>
 </html>  
       
