--- a/code/Login.html
+++ b/code/Login.html
@@ -21,17 +21,12 @@
     </section>
     <section class="account-box">
        <h2>Create an Account</h2>
-       <input class="account" type="text" name="useremail" placeholder="Your Email"><br><br>
+       <input class="account" type="text" name="username" placeholder="Username"><br><br>
        <input class="account-1" type="text" name="useremail" placeholder="Your Email"><br><br>
        <input class="password-1" type="password" name="pwd" placeholder="Your Password"><br><br>
        <input class="password-2" type="password" name="pwd" placeholder="Confirm Password"><br><br>
-
         <button class="loginbtn1">submit&Register</button>
     </section>
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
 </body>
 </html>
