--- a/code/Login.html
+++ b/code/Login.html
@@ -3,30 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>login page</title>
-    <link href="external.css" rel="stylesheet"></link>
+    <link href="./login.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="login navbar">
-      <div class="container-fluid">
-        <span class="login1 navbar-brand mb-0 h1"> Home > Login/Register</span>
+<body class="abc">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../img/logo.png" height="80px" width="180px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link  p-4" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  p-4" href="./shop.html">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  p-4" href="./myaccount.html">My Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  p-4" href="./compare.html">Compare</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="search for items..." aria-label="Search">
+          <img class="seabtn" src="../img/search.png" height="20px" width="20px">
+          <!-- <button class="btn btn-outline-success" type="submit">Search for items</button> -->
+        </form>
+        <button type="button" class="btn position-relative">
+          <img class="likeimg" src="../img/icon-heart.svg" height="20px" width="20px">
+          <span class="likebtn position-absolute top-0 start-100 translate-middle badge rounded-pill">
+            3
+            <span class="visually-hidden">Wishlist</span>
+          </span>
+          <button type="button" class="btn position-relative">
+            <img class="cartbtn" src="../img/icon-cart.svg" height="20px" width="20px">
+            <span class="likebtn position-absolute top-0 start-100 translate-middle badge rounded-pill">
+              3
+              <span class="visually-hidden">Wishlist</span>
+            </span>
+          </button>
       </div>
-        </nav>
-      <section class="login-box">
-        <h1>Login</h1>
-        <input class="email" type="text" name="useremail" placeholder="Your Email"><br><br>
-        <input class="password" type="password" name="pwd" placeholder="Your Password"><br><br>
-        <button class="loginbtn">Login</button>
-    </section>
-    <section class="account-box">
-       <h2>Create an Account</h2>
-       <input class="account" type="text" name="username" placeholder="Username"><br><br>
-       <input class="account-1" type="text" name="useremail" placeholder="Your Email"><br><br>
-       <input class="password-1" type="password" name="pwd" placeholder="Your Password"><br><br>
-       <input class="password-2" type="password" name="pwd" placeholder="Confirm Password"><br><br>
-        <button class="loginbtn1">submit&Register</button>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
+    </div>
+  </nav>
+  <nav class="log navbar">
+    <div class="container-fluid">
+      <span class="login navbar-brand mb-0 h1">Home > Login/Register</span>
+    </div>
+  </nav>
+  <section class="loginbox">
+    <h3>Login</h3>
+    <input class="email" type="text" name="useremail" placeholder="Your Email"><br><br>
+		<input class="emails" type="password" name="pwd"
+     placeholder="Your password"><br><br>
+     <button class="logbtn">Login</button>
+  </section>
+  <section class="loginbox1">
+    <h3>Create an Account</h3>
+    <input class="account" type="text" name="useremail" placeholder="Your Email"><br><br>
+    <input class="account1" type="text" name="useremail" placeholder="Your Email"><br><br>
+		<input class="account2" type="password" name="pwd"
+     placeholder="Your password"><br><br>
+     <input class="account3" type="password" name="pwd"
+     placeholder="Confirm password"><br><br>
+     <button class="logbtn">Submit & Register</button>
+  </section>
+  <!-- Footers -->
+  <section>
+    <nav class="footer navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img class="emaimg" src="../img/icon-email.svg" height="33px" width="33px"></a>
+        <p class="foot1">Sign in to Newsletter</p>
+        <span class="foot2">...and receive $25 coupon for first shopping.</span>
+        <form class="d-flex" role="search">
+          <input class="emailbox form-control" type="search" placeholder="Enter Your Email" aria-label="Search">
+          <button class="subbox btn" type="submit">Subscribe</button>
+        </form>
+      </div>
+    </nav>
+  </section>
+  <section class="footerpart">
+    <img class="footimg" src="../img/logo.png" height="60px" width="180px">
+    <p class="foot6">Contact</p><br>
+    <p class="foot5"><span class="foot4">Address: </span>13 Tlemcen Road, Street 32, Beb-Wahren<br>
+      <span class="foot4">Phone:</span> +012222 365/(+91)01 2345 6789<br>
+      <span class="foot4">Hours:</span> 10:00-18:00, Mon-Sat</p>
+      <p class="foot7">Follow Me</p>
+      <div class="footicons">
+        <img src="../img/icon-facebook.svg" height="20px" width="20px">
+        <img src="../img/icon-twitter.svg" height="20px" width="20px">
+        <img src="../img/icon-instagram.svg" height="20px" width="20px">
+        <img src="../img/icon-pinterest.svg" height="20px" width="20px">
+        <img src="../img/icon-youtube.svg" height="20px" width="20px">
+      </div>
+      <div class="footset">
+        <h5>Address</h5>
+        <p class="footset1">About Us</p>
+        <p>Delivery Information</p>
+        <p>Privacy Policy</p>
+        <p>Terms & Conditions</p>
+        <p>Contact Us</p>
+        <p>Support Centre</p>
+      </div>
+      <div class="footset2">
+        <h5>My Account</h5>
+        <p class="footset1">Sign in</p>
+        <p>View Cart</p>
+        <p>My Wishlist</p>
+        <p>Track My Order</p>
+        <p>Help</p>
+        <p>Order</p>
+      </div>
+      <div class="footpay">
+        <h5>Secured Payed Gateways</h5>
+        <img src="../img/payment-method.png">
+      </div>
+  </section>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   <div class="copyright">
+    <div class="logo" >
+      <hr style="width:1250px;">
+     <p>&copy; 2024 Sravani k ,All right reserved<span id="design">Designer by Sravani k</span> </p>
+     
+    </div>
+  </div>
+   </div>
 </body>
 </html>
