--- a/code/My Account.html
+++ b/code/My Account.html
@@ -19,19 +19,19 @@
      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="headdings">
-      <a class="nav-link active p-4" aria-current="page" href="../sample.html">Home</a>
+      <a class="nav-link active p-4" aria-current="page" href="#">Home</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link active p-4" aria-current="page" href="./Shop.html">Shop</a>
+        <a class="nav-link active p-4" aria-current="page" href="#">Shop</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link active p-4" aria-current="page" href="./My Account.html">My Account</a>
+        <a class="nav-link active p-4" aria-current="page" href="#">My Account</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active p-4" aria-current="page" href="./compare.html">Compare</a>
+          <a class="nav-link active p-4" aria-current="page" href="#">Compare</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link active p-4" aria-current="page" href="./Login.html">Login</a>
+          <a class="nav-link active p-4" aria-current="page" href="#">Login</a>
         </li>
         </ul>
        <form class="d-flex" role="search">
