--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="./Home.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <!-- headers -->
@@ -65,10 +66,15 @@
     <p style="color: rgb(57, 88, 57);">Save more with coupons & up to 20% off</p>
     <button type="button" class="shop btn">Shop Now</button>
   </section>
+  <div class="chervon">
+    <i class="arrow1 fa-solid fa-chevron-left fa-s"></i>
+   <i class="arrow2 fa-solid fa-chevron-right fa-s"></i>
+   </div>
   <!-- Popular Categories -->
   <section>
     <h5 class="pop"><span style="color: teal;">Popular</span> Categories</h5>
     <div class="oneset">
+
       <figure>
         <img class="imgs" src="../img/product-1-1.jpg" height="180px" width="180px">
         <figcaption>T-Shirt</figcaption>
