--- a/code/compare.html
+++ b/code/compare.html
@@ -12,7 +12,7 @@
 <div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-      <a class="logo1" href="#"><img src="../img/logo.png" height="70px" width="250px"></a>
+      <a class="logo1" href="#"><img src="../img/logo1.png" height="100px" width="200px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
