--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
       <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  p-3" href="./Home.html">Home</a>
+            <a class="nav-link  p-3" href="../Home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link  p-3" href="./code/Shop.html">Shop</a>
