--- a/code/Shop.html
+++ b/code/Shop.html
@@ -20,19 +20,19 @@
         <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="./home.html">Home</a>
+              <a class="nav-link  p-4"  href="../Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="./shoppage.html">Shop</a>
+              <a class="nav-link  p-4"  href="./Shop.html">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="./myaccount.html">My Account</a>
+              <a class="nav-link  p-4"  href="./My Account.html">My Account</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  p-4"  href="./compare.html">Compare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
+              <a class="nav-link active p-4" aria-current="page" href="./Login.html">Login</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
