--- a/code/compare.html
+++ b/code/compare.html
@@ -19,19 +19,19 @@
        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="headdings">
-        <a class="nav-link active p-4" aria-current="page" href="#">Home</a>
+        <a class="nav-link active p-4" aria-current="page" href="../Home.html">Home</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active p-4" aria-current="page" href="#">Shop</a>
+          <a class="nav-link active p-4" aria-current="page" href="./Shop.html">Shop</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link active p-4" aria-current="page" href="#">My Account</a>
+          <a class="nav-link active p-4" aria-current="page" href="./My Account.html">My Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Compare</a>
+            <a class="nav-link active p-4" aria-current="page" href="./compare.html">Compare</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Login</a>
+            <a class="nav-link active p-4" aria-current="page" href="./Login.html">Login</a>
           </li>
           </ul>
          <form class="d-flex" role="search">
