--- a/code/Shop.html
+++ b/code/Shop.html
@@ -20,7 +20,7 @@
         <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="../Home.html">Home</a>
+              <a class="nav-link  p-4"  href="./Home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  p-4"  href="./Shop.html">Shop</a>
