--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
       <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  p-3" href="../Home.html">Home</a>
+            <a class="nav-link  p-3" href="./Home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link  p-3" href="./code/Shop.html">Shop</a>
@@ -443,6 +443,11 @@
 </section>
 
   <!-- New arrivals -->
+  
+  <div class="chervon1">
+    <i class="arrow1 fa-solid fa-chevron-left fa-s"></i>
+   <i class="arrow2 fa-solid fa-chevron-right fa-s"></i>
+   </div>
 
   <section class="pro">
     <div class="card">
