--- a/code/My Account.html
+++ b/code/My Account.html
@@ -19,7 +19,7 @@
      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="headdings">
-      <a class="nav-link active p-4" aria-current="page" href="../Home.html">Home</a>
+      <a class="nav-link active p-4" aria-current="page" href="./Home.html">Home</a>
       </li>
         <li class="nav-item">
         <a class="nav-link active p-4" aria-current="page" href="./Shop.html">Shop</a>
